--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a href="form1.html">Form 1</a>
     <br>
     <a href="form2.html">Form 2</a>
+    <br>
+    <a href="wikipedia.html">Wikipedia</a>
 </body>
 </html>
