--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <a href="form2.html">Form 2</a>
     <br>
     <a href="wikipedia.html">Wikipedia</a>
+    <br>
+    <a href="wiki.html">Wikipedia Responsive</a>
 </body>
 </html>
