--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <br>
     <a href="wikipedia.html">Wikipedia</a>
     <br>
+    <a href="flexlayout.html">LAYOUT</a>
+    <br>
     <a href="wiki.html">Wikipedia Responsive</a>
 </body>
 </html>
