--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <a href="flexlayout.html">LAYOUT</a>
     <br>
     <a href="wiki.html">Wikipedia Responsive</a>
+    <br>
+    <a href="fifa.html">FIFA CUP</a>
 </body>
 </html>
