--- a/fifa.html
+++ b/fifa.html
@@ -62,12 +62,12 @@
                     <h3>Croatia </h3>
                     <h3>Brazil </h3> -->
                     <div class="team1">
-                        <p>Quarter-final  <br> Education City Stadium</p>
+                        <p>Semi-final  <br> Lusail  Stadium</p>
+                    <h3>Argentina </h3>
                     <h3>Croatia </h3>
-                    <h3>Brazil </h3>
                     </div>
                     <div class="date1">
-                        <p>09 Dec 2022</p>
+                        <p>14 Dec 2022</p>
                         <br>
                         <p>20.30</p>
                     </div>
@@ -77,12 +77,12 @@
                     <h3>Netherlands </h3>
                     <h3>Argentina</h3> -->
                     <div class="team1">
-                        <p>Quarter-final <br> Lusail Stadium </p>
-                    <h3>Netherlands </h3>
-                    <h3>Argentina</h3>
+                        <p>Semi-final <br> Al Bayt Stadium </p>
+                    <h3>France </h3>
+                    <h3>Morocco</h3>
                     </div>
                     <div class="date1">
-                        <p>10 Dec 2022</p>
+                        <p>15 Dec 2022</p>
                         <br>
                         <p>00.30</p>
                     </div>
