--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <a href="wiki.html">Wikipedia Responsive</a>
     <br>
     <a href="fifa.html">FIFA CUP</a>
+    <br>
+    <a href="bootpage.html">SIMPLE BOOTSTRAP</a>
 </body>
 </html>
