--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <a href="fifa.html">FIFA CUP</a>
     <br>
     <a href="bootpage.html">SIMPLE BOOTSTRAP</a>
+    <br>
+    <a href="template.html">BOOTSTRAP Template</a>
 </body>
 </html>
