--- a/fifa.html
+++ b/fifa.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIFA WORLD CUP</title>
     <link rel="stylesheet" href="fifa.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -24,7 +25,7 @@
            </div>
            <div class="menu">
             <ul>
-                <li><img src="image/toggle.jpg" alt="" height="20px"></li>
+                <li> <a href=""><i class="fa-solid fa-bars"></i></a></li>
                 <li><img src="image/wc.png" alt=""></li>
                 <li><a href="">NEWS</a></li>
                 <li><a href="">HIGHLIGHTS</a></li>
