--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
     <a href="bootpage.html">SIMPLE BOOTSTRAP</a>
     <br>
     <a href="template.html">BOOTSTRAP Template</a>
+    <br>
+    <a href="calculator.html">Calculator</a>
+    <br>
+    <a href="clock.html">Clock</a>
 </body>
 </html>
